Update:fix #2114 datas are too much (#217)

--- a/src/components/TraceTree/style.less
+++ b/src/components/TraceTree/style.less
@@ -15,9 +15,6 @@
  * limitations under the License.
  */
 
-:global(.trace-tree) {
-  height: 1000px;
-}
 :global(.trace-tree .node) {
   cursor: pointer;
 }
